// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangeMail /> component renders correctly 1`] = `
ChangeMail {
  "$$": Object {
    "after_update": Array [],
    "before_update": Array [],
    "bound": Object {},
    "callbacks": Object {},
    "context": Map {},
    "ctx": Array [
      "",
      Flyin {
        "$$": Object {
          "after_update": Array [],
          "before_update": Array [],
          "bound": Object {},
          "callbacks": Object {},
          "context": Map {},
          "ctx": Array [
            false,
            undefined,
            undefined,
            [Function],
            [Function],
          ],
          "dirty": Array [
            -1,
          ],
          "fragment": Object {
            "c": [Function],
            "d": [Function],
            "i": [Function],
            "l": [Function],
            "m": [Function],
            "o": [Function],
            "p": [Function],
          },
          "not_equal": [Function],
          "on_destroy": Array [],
          "on_disconnect": Array [],
          "on_mount": Array [],
          "props": Object {
            "show": 4,
          },
          "root": <div>
            <section
              class="svelte-1sz96f6"
            >
              <h2
                class="svelte-1sz96f6"
              >
                Email
              </h2>
               
              <p>
                Your email address is used to identify you, such as on login but it is 
                <b>
                  not public
                </b>
                . You can change your email address whenever, but it will trigger an email
    confirmation process.
              </p>
               
              <div
                class="input svelte-1sz96f6"
              >
                <div
                  class="container svelte-1ulq3bj"
                  data-required="true"
                  data-sr-only="true"
                >
                  <label
                    class="svelte-1ulq3bj"
                    for="email"
                  >
                    Email
                  </label>
                   
                  <input
                    class="svelte-1ulq3bj"
                    disabled=""
                    id="email"
                    required=""
                    type="email"
                  />
                   
                </div>
              </div>
               
              <button
                class="svelte-1dsjpe6"
                data-type="secondary"
                type="button"
              >
                Change Email
              </button>
              
            </section>
             
            
          </div>,
          "skip_bound": false,
          "update": [Function],
        },
        "$capture_state": [Function],
        "$inject_state": [Function],
      },
      "",
      false,
      [Function],
      [Function],
      [Function],
      [Function],
    ],
    "dirty": Array [
      -1,
    ],
    "fragment": Object {
      "c": [Function],
      "d": [Function],
      "i": [Function],
      "l": [Function],
      "m": [Function],
      "o": [Function],
      "p": [Function],
    },
    "not_equal": [Function],
    "on_destroy": Array [
      [Function],
    ],
    "on_disconnect": Array [],
    "on_mount": Array [],
    "props": Object {
      "email": 0,
    },
    "root": <div>
      <section
        class="svelte-1sz96f6"
      >
        <h2
          class="svelte-1sz96f6"
        >
          Email
        </h2>
         
        <p>
          Your email address is used to identify you, such as on login but it is 
          <b>
            not public
          </b>
          . You can change your email address whenever, but it will trigger an email
    confirmation process.
        </p>
         
        <div
          class="input svelte-1sz96f6"
        >
          <div
            class="container svelte-1ulq3bj"
            data-required="true"
            data-sr-only="true"
          >
            <label
              class="svelte-1ulq3bj"
              for="email"
            >
              Email
            </label>
             
            <input
              class="svelte-1ulq3bj"
              disabled=""
              id="email"
              required=""
              type="email"
            />
             
          </div>
        </div>
         
        <button
          class="svelte-1dsjpe6"
          data-type="secondary"
          type="button"
        >
          Change Email
        </button>
        
      </section>
       
      
    </div>,
    "skip_bound": false,
    "update": [Function],
  },
  "$$set": [Function],
  "$capture_state": [Function],
  "$inject_state": [Function],
}
`;

exports[`<ChangeMail /> component renders edit mode correctly 1`] = `
ChangeMail {
  "$$": Object {
    "after_update": Array [],
    "before_update": Array [],
    "bound": Object {},
    "callbacks": Object {},
    "context": Map {},
    "ctx": Array [
      "",
      Flyin {
        "$$": Object {
          "after_update": Array [],
          "before_update": Array [],
          "bound": Object {},
          "callbacks": Object {},
          "context": Map {},
          "ctx": Array [
            false,
            undefined,
            undefined,
            [Function],
            [Function],
          ],
          "dirty": Array [
            -1,
          ],
          "fragment": Object {
            "c": [Function],
            "d": [Function],
            "i": [Function],
            "l": [Function],
            "m": [Function],
            "o": [Function],
            "p": [Function],
          },
          "not_equal": [Function],
          "on_destroy": Array [],
          "on_disconnect": Array [],
          "on_mount": Array [],
          "props": Object {
            "show": 4,
          },
          "root": <div>
            <section
              class="svelte-1sz96f6"
            >
              <h2
                class="svelte-1sz96f6"
              >
                Email
              </h2>
               
              <p>
                Your email address is used to identify you, such as on login but it is 
                <b>
                  not public
                </b>
                . You can change your email address whenever, but it will trigger an email
    confirmation process.
              </p>
               
              <div
                class="input svelte-1sz96f6"
              >
                <div
                  class="container svelte-1ulq3bj"
                  data-required="true"
                  data-sr-only="true"
                >
                  <label
                    class="svelte-1ulq3bj"
                    for="email"
                  >
                    Email
                  </label>
                   
                  <input
                    class="svelte-1ulq3bj"
                    id="email"
                    required=""
                    type="email"
                  />
                   
                </div>
              </div>
               
              <button
                class="svelte-1dsjpe6"
                data-type="secondary"
                type="button"
              >
                Cancel
              </button>
              
               
              <button
                class="svelte-1dsjpe6"
                data-type="primary"
                type="button"
              >
                Save new Email
              </button>
              
            </section>
             
            
          </div>,
          "skip_bound": false,
          "update": [Function],
        },
        "$capture_state": [Function],
        "$inject_state": [Function],
      },
      "",
      true,
      [Function],
      [Function],
      [Function],
      [Function],
    ],
    "dirty": Array [
      -1,
    ],
    "fragment": Object {
      "c": [Function],
      "d": [Function],
      "i": [Function],
      "l": [Function],
      "m": [Function],
      "o": [Function],
      "p": [Function],
    },
    "not_equal": [Function],
    "on_destroy": Array [
      [Function],
    ],
    "on_disconnect": Array [],
    "on_mount": Array [],
    "props": Object {
      "email": 0,
    },
    "root": <div>
      <section
        class="svelte-1sz96f6"
      >
        <h2
          class="svelte-1sz96f6"
        >
          Email
        </h2>
         
        <p>
          Your email address is used to identify you, such as on login but it is 
          <b>
            not public
          </b>
          . You can change your email address whenever, but it will trigger an email
    confirmation process.
        </p>
         
        <div
          class="input svelte-1sz96f6"
        >
          <div
            class="container svelte-1ulq3bj"
            data-required="true"
            data-sr-only="true"
          >
            <label
              class="svelte-1ulq3bj"
              for="email"
            >
              Email
            </label>
             
            <input
              class="svelte-1ulq3bj"
              id="email"
              required=""
              type="email"
            />
             
          </div>
        </div>
         
        <button
          class="svelte-1dsjpe6"
          data-type="secondary"
          type="button"
        >
          Cancel
        </button>
        
         
        <button
          class="svelte-1dsjpe6"
          data-type="primary"
          type="button"
        >
          Save new Email
        </button>
        
      </section>
       
      
    </div>,
    "skip_bound": false,
    "update": [Function],
  },
  "$$set": [Function],
  "$capture_state": [Function],
  "$inject_state": [Function],
}
`;
